package br.com.ajf.learnjavadesignpatterns.interpreter;

public interface Expression
{
	boolean interpret(String context);
}
